# pcseg

./: .gitattributes  LICENSE  README.md  checkpoint.md  clean_pc.m~  graph_addedges.m  graph_addnodeattributes.m  graph_addnodeattributes.m~  graph_addnodes.m  graph_calcimp.m  graph_pc.mat  graph_pc_10k.mat  graph_pc_imp_10k.mat  graph_pc_imp_room_30k.mat  graph_pc_room_30k.mat  main.m  main.m~  proposal.md  ptCloud_room.mat  segmentation.m  segmentation.m~  teapot_rs.fig
cplusplus/: CMakeLists.txt  CMakeLists.txt~  pcd_main.cpp~  pcd_write.cpp  pcd_write2.cpp  sampling.h  viz.cpp  viz.h
cplusplus/include/: sampling.h  segmentation.h  voxel.h
cplusplus/src/: helper.hpp  pcd_main.cpp  sampling.cpp  segmentation.cpp  supervoxel.cpp
cplusplus/src/old/: pcd_write.cpp
cuda/: CMakeLists.txt  CMakeLists.txt~
cuda/include/: cuda_methods.h  cuda_test.h  cuda_test.h~  helper.h  preprocess.h  segmentation.h  viz.h
cuda/src/: #cuda_test.cu#  #segmentation.cpp#  cuda_methods.cu  cuda_methods.cu~  cuda_test.cu  cuda_test.cu~  pcd_cuda.cpp  pcd_cuda.cpp~  preprocess.cpp  preprocess.cpp~  sampling.cpp  segmentation.cpp  viz.cpp
matlab/: body.mat  body_seg.mat  bodygraph_10k.mat  clean_pc.m  flatten.m  graph_addedges.m  graph_addnodeattributes.m  graph_pc.mat  graph_pc_imp_10k.mat  graph_pc_imp_room_30k.mat  graph_pc_room_30k.mat  main.m  main.m~  pc_room_30k.mat  pcbody_10k.mat  segmentation.m  segmentation.m~
objdet/: CMakeLists.txt  CMakeLists.txt~
objdet/include/: obj_features.h  viz.h
objdet/src/: obj_features.cpp  pcd_main.cpp  (+2 more)
pcdata/: body-v2.ply
test/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  saxpy  saxpy.cu  saxpy.cu~
(+69 files in other folders)
