cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_seg)
find_package(PCL 1.3 REQUIRED COMPONENTS common io visualization kdtree)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcd_main viz.cpp pcd_main.cpp)
target_link_libraries(pcd_main ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_LIBRARIES})
